# models/users.go
@@ -10,35 +10,30 @@ import (
 	"github.com/aws/aws-sdk-go/aws"
 	"github.com/aws/aws-sdk-go/service/dynamodb"
 	"github.com/aws/aws-sdk-go/service/dynamodb/dynamodbattribute"
+	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator"
 	"github.com/google/uuid"
 	"golang.org/x/crypto/bcrypt"
 )
 
 type User struct {
-	ID         string `json:"id,omitempty"`
-	Name       string `json:"name" validate:"min=3"`
-	Email      string `json:"email" validate:"required,email"`
-	Password   string `json:"password" validate:"required,min=8"`
-	Phone      int    `json:"phone" validate:"required,numeric,min=10"`
-	Age        int    `json:"age" validate:"required,gt=12"`
-	DOB        string `json:"dob"`
-	Gender     string `json:"gender" validate:"required,oneof=male female"`
-	ProfileUrl string `json:"profile_url"`
-	Active     bool   `json:"active"`
-	CreatedAt  int64  `json:"createdAt"`
-	UpdatedAt  int64  `json:"-"`
-	DeletedAt  int64  `json:"-"`
+	ID         string `form:"user_id,omitempty"`
+	Name       string `form:"name" validate:"min=3"`
+	Email      string `form:"email" validate:"required,email"`
+	ProflieUrl string `form:"profile" binding:"required"`
+	Password   string `form:"password" validate:"required,min=8"`
+	Phone      int    `form:"phone" validate:"required,numeric,min=10"`
+	Age        int    `form:"age" validate:"required,gt=12"`
+	Gender     string `form:"gender" validate:"required,oneof=male female"`
+	Active     bool   `form:"active"`
+	CreatedAt  int64
+	UpdatedAt  int64
+	DeletedAt  int64
 }
 
 func (u *User) Create() (*User, error) {
 	// initialize database
 	db := db.GetDB()
-
-	user, _ := GetByPhone(u.Phone)
-	if len(user.ID) > 0 || user.Phone > 0 {
-		return nil, errors.New("User alrady exists.")
-	}
 	pass, err := u.hashPassword()
 	if err != nil {
 		return nil, errors.New("Could not hash password, something went wrong")
@@ -52,7 +47,7 @@ func (u *User) Create() (*User, error) {
 	u.DeletedAt = time.Now().Unix()
 	item, err := dynamodbattribute.MarshalMap(u)
 	if err != nil {
-		utils.LogError("models/user.go", err, "line-49, converting user data")
+		utils.LogError("models/user.go", err, "line-52, converting user data")
 		return nil, errors.New("error when try to convert user data to dynamodbattribute")
 	}
 	params := &dynamodb.PutItemInput{
@@ -60,7 +55,7 @@ func (u *User) Create() (*User, error) {
 		TableName: aws.String("Users"),
 	}
 	if _, err := db.PutItem(params); err != nil {
-		utils.LogError("models/user.go", err, "line-64, inserting user data")
+		utils.LogError("models/user.go", err, "line-60, inserting user data")
 		return nil, errors.New("error when inserting user to data to database")
 	}
 	return u, nil
@@ -69,6 +64,7 @@ func (u *User) Create() (*User, error) {
 
 func GetByPhone(phone int) (*User, error) {
 	db := db.GetDB()
+
 	params := &dynamodb.GetItemInput{
 		Key: map[string]*dynamodb.AttributeValue{
 			"phone": {
@@ -78,12 +74,14 @@ func GetByPhone(phone int) (*User, error) {
 		TableName:      aws.String("Users"),
 		ConsistentRead: aws.Bool(true),
 	}
-	resp, err := db.GetItem(params)
+
+	result, err := db.GetItem(params)
 	if err != nil {
 		return nil, err
 	}
+
 	var user *User
-	if err := dynamodbattribute.UnmarshalMap(resp.Item, &user); err != nil {
+	if err := dynamodbattribute.UnmarshalMap(result.Item, &user); err != nil {
 		return nil, err
 	}
 	return user, nil
@@ -109,4 +107,21 @@ func (u *User) hashPassword() (string, error) {
 func ComparePassword(hash string, password string) bool {
 	err := bcrypt.CompareHashAndPassword([]byte(hash), []byte(password))
 	return err == nil
+}
+
+func CreateUserObj(c *gin.Context) *User {
+	phone, _ := strconv.Atoi(c.Request.FormValue("phone"))
+	age, _ := strconv.Atoi(c.Request.FormValue("age"))
+	active, _ := strconv.ParseBool(c.Request.FormValue("name"))
+
+	user := &User{
+		Name:     c.Request.FormValue("name"),
+		Email:    c.Request.FormValue("email"),
+		Password: c.Request.FormValue("password"),
+		Phone:    phone,
+		Age:      age,
+		Gender:   c.Request.FormValue("gender"),
+		Active:   active,
+	}
+	return user
 }
